minor changes. 10am - working on incorporating solunar data
------------------------------------------------------------------------
Firestore:
- need to establish the code for allowing objects to be added, updated, deleted
1. Trips
2. FishEvents

2) NETWORKING/API:
 1. need to create service/receiver for calling Solunar Data API
  - should be straightforward based on the schema working for the others
 2. need to map data to views for solunar data

3. Widget:
 - need to make one that shows:
  - "fishing outlook"
  - allows FishEvent to be created

--- a/AnyoneCanFish/app/src/main/res/menu/menu_main.xml
+++ b/AnyoneCanFish/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity">
+    <item
+        android:id="@+id/forcesync_forecast_data"
+        android:icon="@android:drawable/stat_notify_sync_noanim"
+        android:title=""
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_open_settings"
         android:orderInCategory="1"
