--- a/AnyoneCanFish/app/src/main/res/layout/activity_main.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
+        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_popup_sync" />
+        app:srcCompat="@drawable/plus_sign" />
 
 </android.support.design.widget.CoordinatorLayout>
