--- a/AnyoneCanFish/app/src/main/res/values/dimens.xml
+++ b/AnyoneCanFish/app/src/main/res/values/dimens.xml
@@ -14,4 +14,11 @@
     <dimen name="text_margin">16dp</dimen>
 
     <dimen name="navicon_size">26dp</dimen>
+
+    <dimen name="widget_thin_margin">4dp</dimen>
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_header_padding">8dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
