Widget still not showing any data
------------------------------------------------------------------------
Firestore:
- need to establish the code for allowing objects to be added, updated, deleted
1. Trips
2. FishEvents

2) NETWORKING/API:
- could add a way to map data to views for solunar data

3. Widget:
- not showing data, but it is there.

--- a/AnyoneCanFish/app/src/main/res/layout/content_fishing_basics.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_fishing_basics.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/basics_whatyouneed"
-                android:src="@drawable/what_need_first_image"
+                android:src="@drawable/"
                 android:scaleType="centerCrop" />
 
             <View
@@ -73,7 +73,7 @@
                 android:fontFamily="@font/adamina"
                 android:textColor="@color/paper_300"
                 android:textSize="24sp"
-                tools:text="What You Need" />
+                tools:text="How To Fish" />
         </FrameLayout>
         <FrameLayout
             android:layout_width="match_parent"
