--- a/AnyoneCanFish/app/src/main/res/layout/content_fishing_basics.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_fishing_basics.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/basics_whatyouneed"
-                android:src="@drawable/"
+                android:src="@drawable/what_need_first_image"
                 android:scaleType="centerCrop" />
 
             <View
@@ -44,6 +44,7 @@
                 android:fontFamily="@font/adamina"
                 android:textColor="@color/paper_300"
                 android:textSize="24sp"
+                android:text="@string/basics_whatyouneed"
                 tools:text="What You Need" />
         </FrameLayout>
         <FrameLayout
@@ -73,6 +74,7 @@
                 android:fontFamily="@font/adamina"
                 android:textColor="@color/paper_300"
                 android:textSize="24sp"
+                android:text="@string/basics_howtofish"
                 tools:text="How To Fish" />
         </FrameLayout>
         <FrameLayout
@@ -102,6 +104,7 @@
                 android:fontFamily="@font/adamina"
                 android:textColor="@color/paper_300"
                 android:textSize="24sp"
+                android:text="@string/basics_rulesresources"
                 tools:text="Rules Resources" />
         </FrameLayout>
         <FrameLayout
@@ -131,6 +134,7 @@
                 android:fontFamily="@font/adamina"
                 android:textColor="@color/paper_300"
                 android:textSize="24sp"
+                android:text="@string/basics_maintenance"
                 tools:text="Maintenance Tips" />
         </FrameLayout>
     </LinearLayout>
