--- a/AnyoneCanFish/app/src/main/res/layout/content_tackle_boxes.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_tackle_boxes.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".TackleBoxesActivity"
+    tools:context=".GameFishActivity"
     tools:showIn="@layout/activity_tackle_boxes">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvTackleBoxes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/rv_content_tackle_boxes"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
