--- a/AnyoneCanFish/app/src/main/res/layout/fishing_widget_forecast_detail.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fishing_widget_forecast_detail.xml
@@ -35,14 +35,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="2"
+        android:weightSum="5"
         android:orientation="horizontal">
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:layout_margin="@dimen/widget_thin_margin"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/widgetItemContainer"
             >
             <ImageView
@@ -81,8 +82,8 @@
                     android:layout_gravity="start|bottom"
                     android:fontFamily="@font/adamina"
                     android:textColor="@color/paper_500"
-                    android:text="GOOD"
-                    android:textSize="8sp" />
+                    tools:text="GOOD"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/widgetDay"
@@ -90,9 +91,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|top"
                     android:fontFamily="@font/adamina"
-                    android:text="Tomorrow"
+                    tools:text="Tomorrow"
                     android:textColor="@color/paper_500"
-                    android:textSize="8sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/widgetWindDir"
@@ -100,9 +101,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|bottom"
                     android:fontFamily="@font/adamina"
-                    android:text="NW"
+                    tools:text="NW"
                     android:textColor="@color/paper_500"
-                    android:textSize="8sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/widgetTemperature"
@@ -110,9 +111,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|center_vertical"
                     android:fontFamily="@font/adamina"
-                    android:text="75 F"
+                    tools:text="75 F"
                     android:textColor="@color/paper_500"
-                    android:textSize="8sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/widgetWindSpeed"
@@ -120,24 +121,25 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|center_vertical"
                     android:fontFamily="@font/adamina"
-                    android:text="12 mph"
+                    tools:text="12 mph"
                     android:textColor="@color/paper_500"
-                    android:textSize="8sp" />
+                    android:textSize="12sp" />
 
             </FrameLayout>
 
         </FrameLayout>
+
         <ImageButton
             android:id="@+id/LogFishEvent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:layout_weight="1"
-            android:padding="@dimen/widget_header_padding"
-            android:src="@drawable/fish_leaping_icon_002"
-            android:elevation="4dp"
+            android:layout_weight="2"
+            android:background="@color/paper_500"
             android:contentDescription="@string/content_log_event_icon"
-            />
+            android:elevation="4dp"
+            android:padding="@dimen/widget_header_padding"
+            android:scaleType="centerInside"
+            android:src="@drawable/fish_leaping_icon_circle" />
     </LinearLayout>
 
 </LinearLayout>
