--- a/AnyoneCanFish/app/src/main/res/layout/fishing_widget_provider_layout.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fishing_widget_provider_layout.xml
@@ -34,22 +34,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="2"
+        android:weightSum="5"
         android:orientation="horizontal">
         <ListView
             android:id="@+id/widget_list"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="3">
         </ListView>
         <ImageButton
             android:id="@+id/LogFishEvent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_gravity="top"
             android:scaleType="centerInside"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:padding="@dimen/widget_header_padding"
-            android:src="@drawable/fish_leaping_icon_002"
+            android:src="@drawable/fish_leaping_icon_circle"
             android:elevation="4dp"
             android:contentDescription="@string/content_log_event_icon"
             />
